# resilient-call

./: CHANGELOG.md  README.md  pyproject.toml
diagrams/: 01_class_diagram_internal.md  02_class_diagram_public.md  03_state_diagram.md  04_sequence_success.md  05_sequence_retry_success.md  06_sequence_circuit_open.md  07_deployment_diagram.md
docs/: api.rst  conf.py  index.rst  quickstart.rst  user_guide.rst
examples/: fallback_pattern.py  microservice_http.py  quickstart.py
report/: main.tex  preamble.tex  references.bib
report/chapters/: 01_component_description.tex  02_architecture.tex  03_user_documentation.tex  04_competitive_analysis.tex
report/figures/: README.txt
resilient_call/: __init__.py  circuit_breaker.py  decorators.py  exceptions.py  executor.py  registry.py  retry.py
tests/: test_circuit_breaker.py  test_decorators.py  test_executor.py  test_retry.py
