[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "resilient-call"
version = "1.0.0"
description = "Retry and circuit-breaker resilience for any Python callable"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Arda Erdoğan", email = "erdoganxarda@gmail.com" }]
requires-python = ">=3.10"
keywords = ["retry", "circuit-breaker", "resilience", "fault-tolerance", "microservices"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
]
docs = [
    "sphinx>=7.2",
    "sphinx-rtd-theme>=2.0",
    "sphinx-autodoc-typehints>=1.25",
]

[project.urls]
Homepage = "https://github.com/ardaerdogan/resilient-call"
Documentation = "https://resilient-call.readthedocs.io"
"Bug Tracker" = "https://github.com/ardaerdogan/resilient-call/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["resilient_call*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["resilient_call"]
omit = ["tests/*", "examples/*"]
